src/stylus/blocks/header.styl
.header
  height 100vh
  background url('/img/header-main-bg.png') center center no-repeat
  background-size cover
  position relative
  padding-top 28px
  &__mouse
    position: absolute
    left: 20%;
    bottom: 50px;
    animation: mouse 3s infinite ease-out
    cursor pointer
  &__logo
    transform: translateY(4px)
  &__top
    display flex
    justify-content: space-between
    align-items: center
    padding: 28px 100px
    position: fixed
    top 0
    left 0
    width 100%
    z-index: 3
    transition: .5s
  &__contacts
    text-align center
  &__button
    padding 14px 24px
    font-family: Lato;
    font-size: 16px;
    font-weight: 700;
    background-color transparent
    border 2px solid secondColor;
    color: #ffffff;
    position relative
    overflow hidden
    cursor: pointer
    & span
      position relative
      z-index 1
    &:hover:before
      width 300px
    &:before
      content: ''
      z-index: 0
      position absolute
      top -30px
      left -40px
      width 30px
      height 100px
      background-color secondColor
      border-radius 50%
      transition .8s
  &__phone
    display block
    color: #ffffff;
    font-family: Lato;
    font-size: 20px;
    white-space: nowrap
    &:before
      content: '\f095'
      font-family FontAwesome
      margin-right 4px
      color secondColor
    &_margin
      margin-bottom 20px
    &_big
      font-size: 20px;
      //font-weight: 700;
  &__main
    display flex
    height 100%
    align-items: center
    color: #ffffff;
  &__about
    margin-left 20%
  &__title
    font-family: "Gotham Pro";
    font-size: 74px;
    font-weight: bold;
    line-height: 80px;
    margin-bottom 40px
    width 930px
  &__text
    font-family: Lato;
    font-size: 34px;
    line-height: 44px;
    font-weight: 400
    width 644px
    & span
      display block

.header__active
  background-color black
  & .header__phone
    display none

@keyframes mouse
  0%
    transform: translateY(0px)
  20%
    transform: translateY(8px)
  40%
    transform: translateY(2px)
  60%
    transform: translateY(7px)
  80%
    transform: translateY(5px)
  100%
    transform: translateY(0px)

